--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "lab-intro-to-express-response",
   "version": "1.0.0",
   "description": "Introduction to Express",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon app.js",
     "test": "jest"
   },
   "dependencies": {
