--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lab-intro-to-express-response",
   "version": "1.0.0",
   "description": "## Getting Started",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "jest"
   },
@@ -10,9 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0"
+    "express": "^4.19.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
