--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Create a server of famous catch phrases and a Magic 8 Ball.",
   "main": "app.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
