--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "lab-intro-to-express-response",
   "version": "1.0.0",
   "description": "## Getting Started",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
